# consensus-research

./: Cargo.toml  LICENSE-APACHEv2  LICENSE-MIT  README.md
.github/workflows/: main.yml
consensus/claro/: Cargo.toml  LICENSE-APACHEv2  LICENSE-MIT
consensus/claro/src/: claro.rs  lib.rs  query.rs  tracing.rs
consensus/claro/src/testing/: query.rs
consensus/snowball/: Cargo.toml  LICENSE-APACHEv2  LICENSE-MIT
consensus/snowball/src/: lib.rs  snowball.rs
resources/snow-family/: bad_distribution.json  demo.json
simulations/snow-family/: Cargo.toml  README.md
simulations/snow-family/src/: app.rs  main.rs  settings.rs
simulations/snow-family/src/network_behaviour/: drop.rs  mod.rs
simulations/snow-family/src/node/: claro.rs  infantile.rs  mod.rs  omniscient.rs  random.rs  snowball.rs
simulations/snow-family/src/output_processors/: mod.rs
simulations/snow-family/src/runner/: async_runner.rs  glauber_runner.rs  layered_runner.rs  mod.rs  sync_runner.rs
simulations/snow-family/src/warding/: converged.rs  mod.rs  stabilised.rs  ttf.rs
