[package]
name = "consensus-simulations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
claro = { path = "../../consensus/claro", features = ["testing"] }
once_cell = "1.13"
polars = { version  = "0.23", features = ["serde", "object", "json", "csv-file", "parquet", "dtype-struct"] }
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.5"
fixed-slice-deque = "0.1.0-beta1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snowball = { path = "../../consensus/snowball" }
